[package]
name = "comments"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-ws = "0.3.0"
futures-util = "0.3.31"
rand = "0.9.1"
reqwest = "0.12.15"
rustrict = "0.7.35"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
